--- a/style.css
+++ b/style.css
@@ -1,13 +1,14 @@
 body {
     font-family: 'Poppins', sans-serif;
-    background-color: #fff;
+    background: url('https://www.toptal.com/designers/subtlepatterns/uploads/triangles_pattern.png');
     color: #333;
     text-align: center;
     padding: 50px 0;
 }
 
+
 header {
-    padding: 20px 0;
+    padding: 10px 0;
 }
 
 .title {
@@ -17,9 +18,9 @@ header {
 }
 
 .image-slider {
-    width: 50%;
+    width: 80%;
     margin: auto;
-    height: 300px;
+    height: 500px;
     box-shadow: 0px 10px 30px -5px rgba(0, 0, 0, 0.1);
     position: relative;
     overflow: hidden;
