--- a/style.css
+++ b/style.css
@@ -62,3 +62,49 @@ button:hover {
     background-color: #333;
     color: #fff;
 }
+.pricing {
+    margin-top: 50px;
+    padding: 50px;
+    background-color: #ffffff;
+    box-shadow: 0px 10px 30px -5px rgba(0, 0, 0, 0.1);
+}
+
+.pricing h2 {
+    font-size: 2em;
+    margin-bottom: 20px;
+}
+
+.table-container {
+    display: flex;
+    justify-content: space-around;
+    flex-wrap: wrap;
+}
+
+.table-background {
+    padding: 20px;
+    margin: 10px;
+    box-sizing: border-box;
+    flex: 1 0 200px;
+}
+
+table {
+    width: 100%;
+    margin: auto;
+    border-collapse: collapse;
+}
+
+th, td {
+    padding: 15px;
+    text-align: left;
+    background-color: transparent;
+    border-bottom: 1px solid #333;
+}
+
+th {
+    background-color: #333;
+    color: #fff;
+}
+
+.naslov-tablice{
+    text-align: center;
+}
