--- a/style.css
+++ b/style.css
@@ -72,6 +72,7 @@ button:hover {
 .pricing h2 {
     font-size: 2em;
     margin-bottom: 20px;
+    border-bottom: 1px solid #333;
 }
 
 .table-container {
@@ -92,10 +93,20 @@ table {
     margin: auto;
     border-collapse: collapse;
 }
+th:nth-child(1), td:nth-child(1) {
+    text-align: left;
+}
+
+th:nth-child(2), td:nth-child(2) {
+    text-align: right;
+}
+
+th[colspan="2"] {
+    text-align: center;
+}
 
 th, td {
     padding: 15px;
-    text-align: left;
     background-color: transparent;
     border-bottom: 1px solid #333;
 }
@@ -105,6 +116,39 @@ th {
     color: #fff;
 }
 
+
 .naslov-tablice{
     text-align: center;
+    border-bottom: 1px solid #ffffff;
+}
+
+.contact-info {
+    margin-top: 50px;
+    padding: 50px;
+    background-color: #f0f0f0;
+    box-shadow: 0px 10px 30px -5px rgba(0, 0, 0, 0.1);
+}
+
+.contact-info h2 {
+    font-size: 2em;
+    margin-bottom: 20px;
+    
+}
+
+.contact-info table {
+    width: 50%;
+    margin: auto;
+    border-collapse: collapse;
+}
+
+.contact-info th, .contact-info td {
+    padding: 15px;
+    text-align: left;
+    border: 1px solid #333;
+}
+
+.contact-info th {
+    background-color: #333;
+    color: #fff;
+    border-bottom: 1px solid #ffffff;
 }
