--- a/style.css
+++ b/style.css
@@ -152,3 +152,26 @@ th {
     color: #fff;
     border-bottom: 1px solid #ffffff;
 }
+.logo-container {
+    text-align: center;
+}
+header {
+    padding: 10px 0;
+    display: flex;         
+    align-items: center;    
+    justify-content: center;
+}
+
+.logo {
+    width: 200px; 
+    height: auto; 
+    margin-right: 20px; /
+}
+
+
+.title {
+    font-size: 5em;
+    margin-bottom: 50px;
+    font-weight: 700;
+    font-family: 'Great Vibes', cursive;
+}
