--- a/style.css
+++ b/style.css
@@ -117,72 +117,37 @@
     color: var(--primary-color);
   }
   
-  .about-us .content {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    gap: 20px;
-  }
-  
   .about-us .content p {
+    position: relative;
     box-sizing: border-box;
-    padding: 40px;
+    margin: 20px auto;
+    padding: 20px;
     border-radius: 5px;
-    box-shadow: 0 0 10pxvar(--shadow-color);
+    box-shadow: 0 0 10px var(--shadow-color);
     text-align: justify;
     background-color: var(--secondary-color);
     color: var(--primary-color);
   }
   
-  .about-us .content p.p1,
-  .about-us .content p.p2,
-  .about-us .content p.p3,
-  .about-us .content p.p4,
-  .about-us .content p.p5 {
-    background-color: var(--secondary-color);
-    color: var(--primary-color);
-    display: flex;
-    flex-direction: column;
-    align-items: flex-start;
-    justify-content: center;
-    text-align: left;
-    height: 200px;
-    transition: transform 0.3s ease;
-    padding: 20px 30% 20px 20px;
-    position: relative;
-  }
-  
-  .about-us .content p.p1::before,
-  .about-us .content p.p2::before,
-  .about-us .content p.p3::before,
-  .about-us .content p.p4::before,
-  .about-us .content p.p5::before {
+  .about-us .content p:before {
     content: '';
     position: absolute;
     top: 0;
-    left: 0;
-    height: 100%;
+    bottom: 0;
+    left: -20px;
     width: 20px;
     background-color: var(--primary-color);
     border-radius: 5px 0 0 5px;
   }
   
-  .about-us .content p.p1:hover,
-  .about-us .content p.p2:hover,
-  .about-us .content p.p3:hover,
-  .about-us .content p.p4:hover,
-  .about-us .content p.p5:hover {
-    transform: scale(1.03);
+  .about-us .content p:nth-child(even) {
+    text-align: left;
   }
   
-  .about-us .content p h3 {
-    font-size: 1.5em;
-    margin-bottom: 10px;
-  }
-  
-  .about-us .content p p {
-    margin: 0;
-    font-size: 1em;
+  .about-us .content p:nth-child(even):before {
+    left: auto;
+    right: -20px;
+    border-radius: 0 5px 5px 0;
   }
   
   .logo {
@@ -193,14 +158,6 @@
   
   .logo-container {
     text-align: center;
-  }
-  
-  p {
-    font-size: 1.1em;
-    line-height: 1.8;
-    color: #666;
-    padding: 10px 0;
-    text-align: justify;
   }
   
   .title {
@@ -234,4 +191,3 @@
     background-color: #b5b5b5;
     color: var(--secondary-color);
   }
-  
