--- a/style.css
+++ b/style.css
@@ -76,11 +76,16 @@ button:hover {
   color: var(--secondary-color);
 }
 
+.kontakt{
+  font-size: 2em;
+}
 .contact-info {
   background-color: var(--background-color);
   box-shadow: 0px 10px 30px -5px var(--shadow-color);
   margin-top: 50px;
   padding: 50px;
+  width: 70%;
+  margin: auto;
 }
 
 .contact-info h2, .about-us .o-nama {
@@ -92,13 +97,13 @@ button:hover {
 .contact-info table {
   border-collapse: collapse;
   margin: auto;
-  width: 50%;
+  width: 98%;
 }
 
 .contact-info th, .contact-info td {
   border: 1px solid var(--primary-color);
   padding: 15px;
-  text-align: left;
+  text-align: center;
 }
 
 .contact-info th {
