--- a/style.css
+++ b/style.css
@@ -76,10 +76,12 @@ button:hover {
   color: var(--secondary-color);
 }
 
-.kontakt{
+.kontakt {
   font-size: 2em;
 }
+
 .contact-info {
+  display: none;
   background-color: var(--background-color);
   box-shadow: 0px 10px 30px -5px var(--shadow-color);
   margin-top: 50px;
@@ -88,30 +90,9 @@ button:hover {
   margin: auto;
 }
 
-.contact-info h2, .about-us .o-nama {
-  font-size: 2em;
-  margin-bottom: 20px;
-  text-align: center;
+.contact-info.active {
+  display: block;
 }
-
-.contact-info table {
-  border-collapse: collapse;
-  margin: auto;
-  width: 98%;
-}
-
-.contact-info th, .contact-info td {
-  border: 1px solid var(--primary-color);
-  padding: 15px;
-  text-align: center;
-}
-
-.contact-info th {
-  background-color: var(--primary-color);
-  border-bottom: 1px solid var(--secondary-color);
-  color: var(--secondary-color);
-}
-
 
 .logo {
   height: auto;
@@ -132,14 +113,13 @@ button:hover {
 
 .card {
   background-color: var(--text-box-color);
-  border-radius: 5px 0 0 5px;
+  border-radius: 5px;
   box-shadow: 0 0 10px var(--shadow-color);
   box-sizing: border-box;
   color: var(--primary-color);
   font-size: 2em;
   margin: 20px auto;
   max-width: 80%;
-  padding: 20px;
   position: relative;
   text-align: justify;
   transition: box-shadow 0.3s ease, transform 0.3s ease;
@@ -149,24 +129,20 @@ button:hover {
   display: none;
 }
 
-.card:hover {
-  box-shadow: 0 10px 20px var(--shadow-color);
-  transform: translateY(-10px);
-}
-
-.card:before {
-  background-color: var(--primary-color);
-  border-radius: 5px 0 0 5px;
-  bottom: 0;
-  content: '';
-  left: 0px;
-  position: absolute;
-  top: 0;
-  width: 20px;
-}
-
 .card.active {
   display: block;
+  animation: fadeInUp 1s;
+}
+
+@keyframes fadeInUp {
+  0% {
+    transform: translateY(20px);
+    opacity: 0;
+  }
+  100% {
+    transform: translateY(0);
+    opacity: 1;
+  }
 }
 
 .card-container {
@@ -175,4 +151,21 @@ button:hover {
   justify-content: center;
   align-items: center;
   gap: 20px;
+}
+
+.menu-container {
+  position: fixed;
+  top: 20px;
+  right: -100px; /* Adjust the initial position to be outside the viewport */
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  height: 20px;
+  cursor: pointer;
+  z-index: 9999;
+  transition: right 0.3s ease; /* Add transition for smooth animation */
+}
+
+.menu-container.open {
+  right: 20px; /* Slide the menu 100px to the left when open */
 }
