--- a/style.css
+++ b/style.css
@@ -55,7 +55,7 @@ header {
   left: 0;
   object-fit: cover;
   opacity: 0;
-  position: relative;
+  position: absolute;
   top: 0;
   transition: opacity 1s ease-in-out;
   width: 100%;
@@ -64,6 +64,7 @@ header {
 .slider-image.active {
   opacity: 1;
 }
+
 
 .button-container {
   display: flex;
@@ -92,7 +93,7 @@ button:hover {
   width: 80%;
 }
 .contact-info {
-  margin-top: 50px;
+  margin-top: 20px;
   padding: 50px;
   background-color: var(--background-color);
   box-shadow: 0px 10px 30px -5px var(--shadow-color);
@@ -187,11 +188,11 @@ label .hamburger {
   background: #69D2e7;
   display: block;
   transform-origin: center;
-  transition: .2s ease-in-out;
+  transition: .3s ease-in-out;
 }
 
 label .hamburger:after, label .hamburger:before {
-  transition: .2s ease-in-out;
+  transition: .3s ease-in-out;
   content: "";
   position: absolute;
   display: block;
@@ -237,7 +238,7 @@ label ul {
   left: 50%;
   transform: translate(-50%, -50%);
   opacity: 0;
-  transition: .25s 0s ease-in-out;
+  transition: .5s 0s ease-in-out;
   display: none; /* Add this line */
 }
 
